--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/estilo.css">
+	<link rel="stylesheet"  href="css/estilo.css">
 	<title></title>
 </head>
 <body>
 <h1>prueba</h1>
+
+
+<script>
+	
+
+fetch("prueba.txt")
+.then(respuesta => respuesta.text())
+.then(contenido => {
+	console.log(contenido);
+});
+
+</script>
 </body>
 </html>
